# SD3-implementation

./: .clang-format  .gitignore  CMakeLists.txt  ConflictTable.h  Dependence.cpp  Dependence.h  HistoryPointTable.cpp  HistoryPointTable.h  HistoryStrideTable.cpp  HistoryStrideTable.h  Interval.cpp  Interval.h  LoopInstance.cpp  LoopInstance.h  Makefile  PendingPointTable.cpp  PendingPointTable.h  PendingStrideTable.cpp  PendingStrideTable.h  Point.cpp  Point.h  README.md  Stride.cpp  Stride.h  StrideDetector.cpp  StrideDetector.h  Types.h  new-input.txt  out  stylize.sh  test-new-in.cpp  tester.cpp
NewTestInputs/: fo-sl.out
NewTestInputs/preMod/: HistoryPointTable.cpp  HistoryPointTable.h  PendingPointTable.cpp  PendingPointTable.h
OldTestOutputs/: 2strides.out  2strides2.out  fo-sl-ws-ss-backTobegin.out  fo-sl-ws-ss.out  memAddFile2.out
TestInputs/: 2strides2.txt  fo-sl-ws-ss-backTobegin.txt  fo-sl-ws.txt-out  fo-sl.txt  memAddFile2.txt.orig-out
include/: c_interface.h
preModStrideDetector/: Dependence.h  HistoryPointTable.h  HistoryStrideTable.cpp  HistoryStrideTable.h  PendingPointTable.cpp  PendingPointTable.h  PendingStrideTable.cpp  PendingStrideTable.h  Point.cpp  Point.h  Stride.cpp  Stride.h  StrideDetector.cpp  StrideDetector.h  Types.h  tester.cpp
single_pc_test_data/: basic_strides.txt  basic_strides2.txt
src/: CompressedBits.cpp  CompressedBits.h  ConflictData.h  ConflictTable.h  Dependence.cpp  Dependence.h  FindIntersect.cpp  FindIntersect.h  HistoryPointTable.cpp  HistoryPointTable.h  HistoryStrideTable.cpp  HistoryStrideTable.h  Interval.cpp  Interval.h  IntervalOverlap.h  IntervalTypes.cpp  IntervalTypes.h  LoopInstance.cpp  LoopInstance.h  LoopStack.cpp  LoopStack.h  PC_ID.h  PendingPointTable.cpp  PendingPointTable.h  PendingStrideTable.cpp  PendingStrideTable.h  Point.cpp  Point.h  Stride.cpp  Stride.h  StrideDetector.cpp  StrideDetector.h  Types.h  c_interface.cpp  dynamic_gcd.cpp  dynamic_gcd.h
test/: CompressedBitsTest.cpp  conflict_test.cpp  gcd_test.cpp  interval_overlap.cpp  point_table_test.cpp  test-new-in.cpp  test_object.cpp  test_object.h  tester.cpp
test-data/OldTestInputs/: 2strides.txt  fo-sl-ws-ss-back2.txt  fo-sl-ws-ss-back2.txt-out  fo-sl-ws-ss.txt  fo-sl-ws.txt  memAddFile2.txt.orig
test-data/conflict-out/: conflicts_nested_loop.txt  conflicts_werid_strides.txt  false_read_write_dep.txt  kill_bit_dep.txt  kill_bit_nested_loop.txt  many_points.txt  mat_mul.txt  no_conflicts_werid_strides.txt  sd3_example.txt
test-gen-scripts/: conflicts.py  generator.py
test-scripts/: conflicts.py  generator.py  test_runner.py
test-src/: CompressedBitsTest.cpp  FindIntersectTest.cpp  binary_reader.cpp  conflict_test.cpp  gcd_test.cpp  interval_overlap.cpp  merge_test.cpp  stride-detector-tester.cpp  test_object.cpp  test_object.h
trees/: Interval.cpp  Interval.h  intervalTester  intervalTester.cpp
